fluxcd/apps/overlays/production/semaphore/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore
  annotations:
    lbipam.cilium.io/ips: "172.22.30.86"
    lbipam.cilium.io/sharing-key: "zeldas-lullaby"
spec:
  type: LoadBalancer
