fluxcd/apps/overlays/production/semaphore/service-semaphore-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore
  labels:
    policy.prplanit.com/ingress: "true"
